--- a/vignettes/Rcpi.bib
+++ b/vignettes/Rcpi.bib
@@ -520,18 +520,28 @@
   year={2005}
 }
 
-@Manual{CRAN:protr,
-  title = {protr: Protein Sequence Descriptor Calculation and Similarity Computation with R},
-  author = {Nan Xiao and Qingsong Xu and Dongsheng Cao},
-  year = {2014},
-  note = {R package version 0.2-1},
-  url = {http://CRAN.R-project.org/package=protr}
+@article{Xiao2015,
+author = {Xiao, Nan and Cao, Dong-Sheng and Zhu, Min-Feng and Xu, Qing-Song.},
+title = {{protr/ProtrWeb: R package and web server for generating various numerical representation schemes of protein sequences}},
+journal = {Bioinformatics},
+year = {2015},
+volume = {31},
+number = {11},
+pages = {1857--1859},
+doi = {10.1093/bioinformatics/btv042},
+issn = {1367-4803},
+url = {http://bioinformatics.oxfordjournals.org/content/31/11/1857}
 }
 
-@Manual{Rcpi,
-  title = {Rcpi: Toolkit for Compound-Protein Interaction in Drug Discovery},
-  author = {Nan Xiao and Dongsheng Cao and Qingsong Xu},
-  year = {2014},
-  note = {R package version 1.0.0},
-  url = {https://www.bioconductor.org/packages/release/bioc/html/Rcpi.html}
+@article{Rcpi2015,
+author = {Cao, Dong-Sheng and Xiao, Nan and Xu, Qing-Song and Alex F. Chen.},
+title = {{Rcpi: R/Bioconductor package to generate various descriptors of proteins, compounds and their interactions}},
+journal = {Bioinformatics},
+year = {2015},
+volume = {31},
+number = {2},
+pages = {279--281},
+doi = {10.1093/bioinformatics/btu624},
+issn = {1367-4803},
+url = {http://bioinformatics.oxfordjournals.org/content/31/2/279}
 }
