sweave to rmarkdown

--- a/vignettes/Rcpi.bib
+++ b/vignettes/Rcpi.bib
@@ -1,7 +1,7 @@
 @article{chou2008cell,
   title={Cell-PLoc: a package of Web servers for predicting subcellular localization of proteins in various organisms},
   author={Chou, Kuo-Chen and Shen, Hong-Bin},
-  journal={Nature protocols},
+  journal={Nature Protocols},
   volume={3},
   number={2},
   pages={153--162},
@@ -59,9 +59,7 @@
   journal = {Bioinformatics},
   year = {2005},
   volume = {21},
-  pages = {10-19},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {10-19}
 }
 
 @ARTICLE{choupaac,
@@ -71,9 +69,7 @@
   journal = {PROTEINS: Structure, Function, and Genetics},
   year = {2001},
   volume = {43},
-  pages = {246-255},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {246-255}
 }
 
 @ARTICLE{chouqsoe,
@@ -83,9 +79,7 @@
   journal = {Biochemical and Biophysical Research Communications},
   year = {2000},
   volume = {278},
-  pages = {477-483},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {477-483}
 }
 
 @ARTICLE{choucai,
@@ -94,9 +88,7 @@
   journal = {Biochemical and Biophysical Research Communications},
   year = {2004},
   volume = {320},
-  pages = {1236-1239},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {1236-1239}
 }
 
 @ARTICLE{damborsky,
@@ -106,9 +98,7 @@
   journal = {Protein Engineering},
   year = {1998},
   volume = {11},
-  pages = {21-30},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {21-30}
 }
 
 @ARTICLE{dubchak1,
@@ -119,9 +109,7 @@
   journal = {Proceedings of the National Academy of Sciences},
   year = {1995},
   volume = {92},
-  pages = {8700-8704},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {8700-8704}
 }
 
 @ARTICLE{dubchak2,
@@ -131,9 +119,7 @@
   journal = {Proteins: Structure, Function and Genetics},
   year = {1999},
   volume = {35},
-  pages = {401-407},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {401-407}
 }
 
 @ARTICLE{grantham,
@@ -142,9 +128,7 @@
   journal = {Science},
   year = {1974},
   volume = {185},
-  pages = {862-864},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {862-864}
 }
 
 @ARTICLE{hopp,
@@ -153,9 +137,7 @@
   journal = {Proceedings of the National Academy of Sciences},
   year = {1981},
   volume = {78},
-  pages = {3824-3828},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {3824-3828}
 }
 
 @ARTICLE{aaindex2000,
@@ -164,9 +146,7 @@
   journal = {Nucleic Acids Research},
   year = {2000},
   volume = {28},
-  pages = {374},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {374}
 }
 
 @ARTICLE{aaindex1999,
@@ -175,9 +155,7 @@
   journal = {Nucleic Acids Research},
   year = {1999},
   volume = {27},
-  pages = {368-369},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {368-369}
 }
 
 @ARTICLE{aaindex2008,
@@ -187,9 +165,7 @@
   journal = {Nucleic Acids Research},
   year = {2008},
   volume = {36},
-  pages = {D202-D205},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {D202-D205}
 }
 
 @ARTICLE{zrli,
@@ -200,9 +176,7 @@
   journal = {Nucleic Acids Research},
   year = {2006},
   volume = {34},
-  pages = {32-37},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {32-37}
 }
 
 @ARTICLE{raohb,
@@ -212,9 +186,7 @@
   journal = {Nucleic Acids Research},
   year = {2011},
   volume = {39},
-  pages = {385-390},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {385-390}
 }
 
 @ARTICLE{wrede,
@@ -225,9 +197,7 @@
   journal = {Biophysical Journal},
   year = {1994},
   volume = {66},
-  pages = {335-344},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {335-344}
 }
 
 @ARTICLE{shenjw,
@@ -237,9 +207,7 @@
   journal = {Proceedings of the National Academy of Sciences},
   year = {2007},
   volume = {104},
-  pages = {4337-4341},
-  owner = {jimmy},
-  timestamp = {2012.11.14}
+  pages = {4337-4341}
 }
 
 @article{van2013benchmarking1,
